// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App navbar renders correctly when signed in as admin 1`] = `

<nav id="app-navbar"
     data-server-rendered="true"
     class="navbar navbar-light fixed-top"
>
  <span id="app-navbar-left">
    <a href="#/"
       target="_self"
       class="active navbar-brand d-undefined-none"
    >
      <span>
        My Brand
      </span>
    </a>
  </span>
  <span id="app-navbar-right">
    <ul right
        class="nav navbar-nav"
    >
      <div id="announcements">
        <button id="announcements-toggle"
                type="button"
                class="d-flex btn btn-secondary"
        >
          <icon name="bell">
          </icon>
          <!---->
        </button>
        <div class="card"
             style="display:none;"
        >
          <div class="list-group">
          </div>
        </div>
      </div>
      <li class="nav-item b-nav-dropdown dropdown">
        <a href="#"
           aria-haspopup="true"
           aria-expanded="false"
           class="nav-link dropdown-toggle"
        >
          <span>
            JohnDoe
          </span>
        </a>
        <div role="menu"
             class="dropdown-menu dropdown-menu-right"
        >
          <a href="#/account/JohnDoe"
             role="menuitem"
             target="_self"
             class="dropdown-item"
          >
            Profile
          </a>
          <a href="#/account/JohnDoe/settings/profile"
             role="menuitem"
             target="_self"
             class="dropdown-item"
          >
            Settings
          </a>
          <span>
            <div role="separator"
                 class="dropdown-divider"
            >
            </div>
            <a href="#/account/JohnDoe/projects"
               role="menuitem"
               target="_self"
               class="dropdown-item"
            >
              Open Project
            </a>
          </span>
          <span>
            <div role="separator"
                 class="dropdown-divider"
            >
            </div>
            <a href="#/admin/dashboard"
               role="menuitem"
               target="_self"
               class="dropdown-item"
            >
              Admin
            </a>
          </span>
          <div role="separator"
               class="dropdown-divider"
          >
          </div>
          <a role="menuitem"
             href="#"
             target="_self"
             aria-disabled="false"
             class="dropdown-item"
          >
            Sign Out
          </a>
        </div>
      </li>
    </ul>
  </span>
</nav>

`;

exports[`App navbar renders correctly when signed in as non-admin 1`] = `

<nav id="app-navbar"
     data-server-rendered="true"
     class="navbar navbar-light fixed-top"
>
  <span id="app-navbar-left">
    <a href="#/"
       target="_self"
       class="active navbar-brand d-undefined-none"
    >
      <span>
        My Brand
      </span>
    </a>
  </span>
  <span id="app-navbar-right">
    <ul right
        class="nav navbar-nav"
    >
      <div id="announcements">
        <button id="announcements-toggle"
                type="button"
                class="d-flex btn btn-secondary"
        >
          <icon name="bell">
          </icon>
          <!---->
        </button>
        <div class="card"
             style="display:none;"
        >
          <div class="list-group">
          </div>
        </div>
      </div>
      <li class="nav-item b-nav-dropdown dropdown">
        <a href="#"
           aria-haspopup="true"
           aria-expanded="false"
           class="nav-link dropdown-toggle"
        >
          <span>
            JohnDoe
          </span>
        </a>
        <div role="menu"
             class="dropdown-menu dropdown-menu-right"
        >
          <a href="#/account/JohnDoe"
             role="menuitem"
             target="_self"
             class="dropdown-item"
          >
            Profile
          </a>
          <a href="#/account/JohnDoe/settings/profile"
             role="menuitem"
             target="_self"
             class="dropdown-item"
          >
            Settings
          </a>
          <!---->
          <!---->
          <div role="separator"
               class="dropdown-divider"
          >
          </div>
          <a role="menuitem"
             href="#"
             target="_self"
             aria-disabled="false"
             class="dropdown-item"
          >
            Sign Out
          </a>
        </div>
      </li>
    </ul>
  </span>
</nav>

`;

exports[`App navbar renders correctly when signed out 1`] = `

<nav id="app-navbar"
     data-server-rendered="true"
     class="navbar navbar-light fixed-top"
>
  <span id="app-navbar-left">
    <a href="#/"
       target="_self"
       class="active navbar-brand d-undefined-none"
    >
      <span>
        My Brand
      </span>
    </a>
  </span>
  <span id="app-navbar-right">
    <ul id="sign-in-up"
        right
        class="nav navbar-nav"
    >
      <li class="nav-item">
        <a href="#/account/signin?next=%2F"
           target="_self"
           class="nav-link"
        >
          Sign in
        </a>
      </li>
      <li id="btn-register"
          class="nav-item"
      >
        <a href="#/account/register"
           target="_self"
           class="nav-link"
        >
          Sign up
        </a>
      </li>
    </ul>
  </span>
</nav>

`;
